Paper Mario Items 0.7.0 -- Update notes
- 