@@ -1,0 +1,46 @@
+using Terraria;
+using Terraria.ID;
+using Terraria.ModLoader;
+
+namespace PaperMarioItems.Content.Items.ConsumablesSPM
+{ 
+	public class DayzeeTear : ModItem
+	{
+        public override void SetStaticDefaults()
+        {
+            ItemID.Sets.FoodParticleColors[Type] = [new(90, 255, 255)];
+            Item.ResearchUnlockCount = 80;
+        }
+
+        public override void SetDefaults()
+        {
+            Item.DefaultToFood(26, 38, 0, 0, true);
+            Item.rare = ItemRarityID.Blue;
+            Item.value = Item.sellPrice(silver: 25);
+            Item.healLife = 15;
+            Item.potion = true;
+        }
+
+        public override void OnConsumeItem(Player player)
+        {
+            player.TryToResetHungerToNeutral();
+            player.ClearBuff(BuffID.Poisoned);
+        }
+
+        //detour
+        public override void Load()
+        {
+            On_Player.ApplyPotionDelay += On_Player_ApplyPotionDelay;
+        }
+        private void On_Player_ApplyPotionDelay(On_Player.orig_ApplyPotionDelay orig, Player self, Item sItem)
+        {
+            if (sItem.type == Type)
+            {
+                int delay = 240;
+                if (self.pStone) delay = (int)(delay * Player.PhilosopherStoneDurationMultiplier);
+                self.AddBuff(21, delay);
+            }
+            else orig(self, sItem);
+        }
+    }
+}
