@@ -1,2 +1,3 @@
 Paper Mario Items 0.7.0 -- Update notes
-- 
+- Added items: HP Plus, Power Plus, Sap Soup, Black Apple, Blue Apple, Orange Apple, Pink Apple, Mighty Tonic, Primordial Fruit, Slimy Mushroom, Dayzee Tear
+- Added buffs: 
